--- a/HTML/travel.html
+++ b/HTML/travel.html
@@ -29,7 +29,7 @@
                 <a href="#contact">Contact Us</a>
             </div>
             <div class="register">
-                <a href="signup.html">Register</a>
+                <a href="signup.html" id = "dynamic-button">Register</a>
             </div>
         </nav>
 
@@ -222,6 +222,7 @@
                 </footer>
             </section>
             <script src="../JS/contact.js"></script>
+            <script src="../JS/travel.js"></script>
 </body>
 
 </html>
