--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -18,7 +18,7 @@
       <input type="password" id="password" placeholder="Password">
       <input type="password" id="confirmPassword" placeholder="Confirm Password">
       <button type="submit">Register</button>
-      <a href="login.html">Already have an account? Login</a>
+      <a href="login2.html">Already have an account? Login</a>
       <a href="travel.html">← Back to Home</a>
     </form>
   </div>
