--- a/HTML/travel.html
+++ b/HTML/travel.html
@@ -26,6 +26,7 @@
                 <a href="#services">Our Services</a>
                 <a href="#offers">Best Offers</a>
                 <a href="#reviews">Reviews</a>
+                <a href="about.html">About</a>
 
             </div>
             <div class="register">
@@ -56,11 +57,53 @@
         <section class="services container" >
             <div class="grid">
                 <div class="card">
-                    <div class="icon">✈️</div>
-                    <h3>Flight Booking</h3>
-                    <p>Quick and easy flight bookings with the best deals.</p>
-                    <span class="badge">Popular</span>
-                </div>
+    <div class="icon">✈️</div>
+    <h3>Flight Booking</h3>
+    <p>Quick and easy flight bookings with the best deals.</p>
+
+    <a href="booking.html" class="animated-btn">Book Now</a>
+</div>
+
+<style>
+.animated-btn {
+    display: inline-block;
+    padding: 8px 12px;
+    font-size: 12px;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+    border-radius: 20px;
+    background: linear-gradient(45deg, #22d3ee, #7b5fff);
+    position: relative;
+    overflow: hidden;
+    transition: 0.3s;
+}
+
+.animated-btn:hover {
+    transform: scale(1.05);
+}
+
+.animated-btn::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -75%;
+    width: 50%;
+    height: 100%;
+    background: rgba(255,255,255,0.3);
+    transform: skewX(-25deg);
+    transition: 0.5s;
+}
+
+.animated-btn:hover::before {
+    left: 125%;
+}
+
+.animated-btn:active {
+    transform: scale(0.95);
+}
+</style>
+
                 <div class="card">
                     <div class="icon">🏨</div>
                     <h3>Hotel Stay</h3>
@@ -255,7 +298,7 @@
                 <a href="#">🌐</a>
                 <a href="#">📘</a>
                 <a href="#">📸</a>
-                <a href="#">🐦</a>
+                
             </div>
         </div>
 
